--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -38,6 +38,8 @@
                     <li><a href="#" th:href="@{/agente/new}">Nuevo Agente</a></li>
                     <li><a href="#" th:href="@{/centros}">Centros</a></li>
                     <li><a href="#" th:href="@{/centro/new}">Nuevo centro</a></li>
+                    <li><a href="#" th:href="@{/admin/users}">Users</a></li>
+                    <li><a href="#" th:href="@{/admin/user/new}">New User</a></li>
                     <li><a href="#" th:href="@{/pdf}">Imprimir listado</a></li>
                     <li> <span sec:authorize="isAuthenticated()">
                 | Logged user: <span sec:authentication="name"></span> |
