--- a/src/main/resources/templates/user/userform.html
+++ b/src/main/resources/templates/user/userform.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
 
-        <title>Sistema de Control de ASP | Detalles de Agente</title>
+        <title>Add User</title>
 
         <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
     </head>
@@ -10,9 +10,9 @@
         <div class="container">
             <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
 <p th:text="${message}"></p>
-            <h2>Agente Details</h2>
+            <h2>User</h2>
             <div>
-                <form class="form-horizontal" th:object="${agente}" th:action="@{/agente}" method="post">
+                <form class="form-horizontal" th:object="${user}" th:action="@{/admin/user}" method="post">
                     <input type="hidden" th:field="*{id}"/>
                     <div class="form-group">
                         <label class="col-sm-2 control-label" th:text="#{oo}" >Name:</label>
@@ -21,29 +21,35 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Lastname</label>
+                        <label class="col-sm-2 control-label">UserName</label>
                         <div class="col-sm-10">
-                            <input type="text" required="true" class="form-control" th:field="*{lastname}"/>
+                            <input type="text" required="true" class="form-control" th:field="*{username}"/>
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">CI:</label>
+                        <label class="col-sm-2 control-label">email:</label>
                         <div class="col-sm-10">
-                            <input type="text" required="true" class="form-control" th:field="*{ci}"/>
+                            <input type="text" required="true" class="form-control" th:field="*{email}"/>
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Centro:</label>
+                        <label class="col-sm-2 control-label">password:</label>
                         <div class="col-sm-10">
-                            <select class="form-control" th:field="*{centroIdId}">
-                                <option th:each="centro : ${centros}"
-                                        th:value="${{centro.id}}" th:text="${centro.name}">
+                            <input type="password" required="true" class="form-control" th:field="*{password}"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Group:</label>
+                        <div class="col-sm-10">
+                            <select class="form-control" th:field="*{group}">
+                                <option th:each="group : ${groups}"
+                                        th:value="${{group.id}}" th:text="${group.name}">
                                 </option>
                             </select>
                         </div>
                     </div>
                     <div class="row">
-                        <button type="submit" class="btn btn-success">Guardar</button>
+                        <button type="submit" class="btn btn-success">Add</button>
                     </div>
                 </form>
             </div>
