--- a/src/main/resources/templates/user/usershow.html
+++ b/src/main/resources/templates/user/usershow.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
 
-        <title>Sistema de Control de ASP | Detalles de Agente</title>
+        <title>Sistema de Control de ASP | Detalles de User</title>
 
         <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
     </head>
@@ -10,30 +10,30 @@
         <div class="container">
             <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
 
-            <h2>Agente Details</h2>
+            <h2>User Details</h2>
             <div>
                 <form class="form-horizontal">
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Agente Id:</label>
+                        <label class="col-sm-2 control-label">User Id:</label>
                         <div class="col-sm-10">
-                            <p class="form-control-static" th:text="${agente.id}">Product Id</p></div>
+                            <p class="form-control-static" th:text="${user.id}">User Id</p></div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Name:</label>
                         <div class="col-sm-10">
-                            <p class="form-control-static" th:text="${agente.name}">name</p>
+                            <p class="form-control-static" th:text="${user.name}">name</p>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Lastname:</label>
                         <div class="col-sm-10">
-                            <p class="form-control-static" th:text="${agente.lastname}">Price</p>
+                            <p class="form-control-static" th:text="${user.username}">Price</p>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label">CI:</label>
                         <div class="col-sm-10">
-                            <p class="form-control-static" th:text="${agente.ci}">Price</p>
+                            <p class="form-control-static" th:text="${user.email}">Price</p>
                         </div>
                     </div>
                 </form>
