--- a/src/main/resources/templates/driver/driverform.html
+++ b/src/main/resources/templates/driver/driverform.html
@@ -12,7 +12,7 @@
 <p th:text="${message}"></p>
             <h2>User</h2>
             <div>
-                <form class="form-horizontal" th:object="${user}" th:action="@{/admin/user}" method="post">
+                <form class="form-horizontal" th:object="${driver}" th:action="@{/admin/driver}" method="post">
                     <input type="hidden" th:field="*{id}"/>
                     <div class="form-group">
                         <label class="col-sm-2 control-label" th:text="#{oo}" >Name:</label>
@@ -23,27 +23,23 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">UserName</label>
                         <div class="col-sm-10">
-                            <input type="text" required="true" class="form-control" th:field="*{username}"/>
+                            <input type="text" required="true" class="form-control" th:field="*{mobile}"/>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label">email:</label>
                         <div class="col-sm-10">
-                            <input type="text" required="true" class="form-control" th:field="*{email}"/>
+                            <input type="text" required="true" class="form-control" th:field="*{nationalId}"/>
                         </div>
                     </div>
+                    
+                    
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">password:</label>
+                        <label class="col-sm-2 control-label">Company:</label>
                         <div class="col-sm-10">
-                            <input type="password" required="true" class="form-control" th:field="*{password}"/>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">Group:</label>
-                        <div class="col-sm-10">
-                            <select class="form-control" th:field="*{group}">
-                                <option th:each="group : ${groups}"
-                                        th:value="${{group.id}}" th:text="${group.name}">
+                            <select class="form-control" th:field="*{company}">
+                                <option th:each="company : ${companies}"
+                                        th:value="${{company.id}}" th:text="${company.name}">
                                 </option>
                             </select>
                         </div>
