--- a/src/main/resources/templates/driver/driverform.html
+++ b/src/main/resources/templates/driver/driverform.html
@@ -21,13 +21,13 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">UserName</label>
+                        <label class="col-sm-2 control-label">Mobile</label>
                         <div class="col-sm-10">
                             <input type="text" required="true" class="form-control" th:field="*{mobile}"/>
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">email:</label>
+                        <label class="col-sm-2 control-label">National ID:</label>
                         <div class="col-sm-10">
                             <input type="text" required="true" class="form-control" th:field="*{nationalId}"/>
                         </div>
